<resources>
    <string name="app_name">TallerConstructora</string>
    <string name="titulo">REGISTRO</string>
    <string name="numero">Numero del apartamento</string>
    <string name="numero1">Numero</string>
    <string name="piso">Numero del piso</string>
    <string name="piso1">Piso</string>
    <string name="buscar">BUSCAR</string>
    <string name="nomenclatura">Nomenclatura del apartamento</string>
    <string name="nomenclatura1">Nomenclatura</string>
    <string name="caracteristica">Caracteristica</string>
    <string name="balcon">Balcon</string>
    <string name="sombra">Sombra</string>
    <string name="precio">Precio</string>
    <string name="tamaño">Tamaño medido en metros cuadrados</string>
    <string name="tamaño1">Tamaño</string>
    <string name="guardar">GUARDAR</string>
    <string name="modificar">MODIFICAR</string>
    <string name="borrar">BORRAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="error1">Digite el numero del apartamento</string>
    <string name="error2">Digite el piso del apartamento</string>
    <string name="error3">Digite la nomenclatura del apartamento</string>
    <string name="error4">Digite el numero del tamaño del area cuadrada del apartamento</string>
    <string name="error5">Digite el valor del apartamento</string>
    <string name="error6">Seleccione por lo menos una caracteristica</string>
    <string name="mensaje1">Apartamento registrado exitosamente</string>
    <string name="mensaje2">Apartamento eliminado exitosamente!</string>
    <string name="mensaje3">¿Esta seguro(a) que desea eliminar este apartamento?</string>
    <string name="mensaje4">Apartamento modificado exitosamente!</string>
    <string name="confirmacion">Confirmacion</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="registrar">Registrar apartamento</string>
    <string name="apartamento_caracteristica">Los de sombra y balcon</string>
    <string name="apartamento_mas_caro">Piso del caro</string>
    <string name="apartamento_mayor_tamaño">Nomenclatura y tamaño del mas grande</string>
    <string name="promedio">Promedio de tamaño en este piso</string>
    <string name="listado">Listado</string>
    <string name="medida">Metros cuadrados</string>
    <string name="reporte">GENERAR REPORTE</string>
    <string name="es">es</string>
    <string name="son">son</string>
    <string name="op1">1</string>
    <string name="op2">2</string>
    <string name="op3">3</string>
    <string name="op4">4</string>
    <string name="op5">5</string>
    <string-array name="opciones">
        <item>@string/registrar</item>
        <item>@string/apartamento_caracteristica</item>
        <item>@string/apartamento_mas_caro</item>
        <item>@string/apartamento_mayor_tamaño</item>
        <item>@string/promedio</item>
        <item>@string/listado</item>
    </string-array>
    <string-array name="opcionesnumero">
        <item>@string/op1</item>
        <item>@string/op2</item>
        <item>@string/op3</item>
    </string-array>
    <string-array name="opcionespiso">
        <item>@string/op1</item>
        <item>@string/op2</item>
        <item>@string/op3</item>
        <item>@string/op4</item>
        <item>@string/op5</item>
    </string-array>

</resources>
